includes/admin/assets/css/builder-style.css
/* ... */
#builder_blvd #builder .element-jumbotron_slider .block-nav a.edit-block-display {
	display: none;
}
#builder_blvd #builder .block-nav a.edit-block-display i {
	position: absolute;
	top: -2px;
	left: 1px;
}
#builder_blvd .block-widget .delete-block {
	color: #a00a00;
	display: block;
	float: left;
	font-size: 11px;
	line-height: 24px;
	padding: 0 5px;
	text-decoration: none;
}
#builder_blvd .block-widget .delete-block:hover {
	color: red;
}
#builder_blvd .column-blocks .block-options {
	display: none;
}

/* =Modal Options
----------------------------------------------- */

.themeblvd-modal #optionsframework {
	max-width: none;
}
.themeblvd-modal #optionsframework .block-form > .section:last-of-type {
	border-bottom: none;
	padding-bottom: 20px;
}
.themeblvd-modal #optionsframework .block-form .item .section:last-of-type {
	padding-bottom: 10px;
}
.themeblvd-modal #optionsframework .controls input.upload {
	font-size: 14px;
	margin: 1px;
	padding: 3px 5px;
}
.themeblvd-modal #optionsframework .jquery-ui-slider {
	margin: 10px 12px;
}

/* Fix for fancy selects from WP admin styling */
.themeblvd-modal .tb-fancy-select select {
	margin: 0;
	padding: 0;
}

/* Options to hide when in modal */
.themeblvd-modal .block-hide {
	display: none;
}
.themeblvd-modal.hide-delete-button .media-button-delete {
	display: none;
}
.themeblvd-modal.hide-dup-button .media-button-secondary {
	display: none;
}

/* Section BG slideshow */
.section-bg-slideshow .section-slider .item-content > .slide-title,
.section-bg-slideshow .section-slider .item-content > .slide-desc,
.section-bg-slideshow .section-slider .item-content > .slide-link {
	display: none;
}

/* =Apprise prompt
----------------------------------------------- */

.themeblvd-builder-legacy-1 .appriseOverlay {
	z-index: 9999;
}

/* =Responsiveness
----------------------------------------------- */

@media (max-width: 1120px) {
	#builder_blvd #optionsframework .section .controls {
		float: none;
		min-width: inherit;
		/* overflow: hidden; */
		width: auto;
	}
	#builder_blvd #optionsframework .section .explain {
		float: none;
		max-width: inherit;
		width: auto;
	}
}

@media (max-width: 782px) {

	/* @TODO Add more mobile styling, more useable (bigger) controls throughout ... */

	/* Main Builder Page */
	#builder_blvd .inner-sidebar {
		float: none;
		clear: none;
		width: auto;
	}
	#builder_blvd .has-right-sidebar #post-body {
		float: none;
		margin: 0 0 0 0;
		width: auto;
	}
	#builder_blvd .has-right-sidebar #post-body-content {
		float: none;
		margin: 0;
	}

	/* Editor Builder (for Edit Page screen) */
	.tb-switch-editor {
		font-size: 16px;
		line-height: 1em;
		margin: 3px 0 0 7px;
		padding: 12px 15px;
	}
}

